<resources>
    <string name="app_name">FootSquadBuilder</string>
    <string name="fut_card_name">Nazwisko</string>
    <string name="fut_card_position">Poz</string>
    <string name="fut_card_score">Ocena</string>
    <string name="title_activity_home">Home_Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Rozpocznij">Rozpocznij</string>
    <string name="name">Nazwa gracza</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="about">O programie</string>
    <string name="formacja121">Formacja 1-2-1</string>
    <string name="formacja112">Formacja 1-1-2</string>
    <string name="formacja211">Formacja 2-1-1</string>
    <string name="about_authors_names">Krzysztof Długokęcki"\n"Kacper Janowski"\n"Jakub Kołton"\n"Wojciech Szymański"\n"Filip Wądołowski"</string>
    <string name="about_authors">Autorzy:</string>
    <string name="about_version">Wersja 1.0 </string>
    <string name="about_description">Aplikacja do zabawy w tworzenie drużyn piłkarskich z wszystkich gwiazd jakie możesz sobie wymażyć :Pogchamp:</string>
    
    <array name="players_photo_drawable">
        <item>@drawable/p1</item>
        <item>@drawable/p2</item>
        <item>@drawable/p3</item>
        <item>@drawable/p4</item>
        <item>@drawable/p5</item>
        <item>@drawable/p6</item>
        <item>@drawable/p7</item>
        <item>@drawable/p8</item>
        <item>@drawable/p9</item>
        <item>@drawable/p10</item>
        <item>@drawable/p11</item>
        <item>@drawable/p12</item>
        <item>@drawable/p13</item>
        <item>@drawable/p14</item>
        <item>@drawable/p15</item>
        <item>@drawable/p16</item>
        <item>@drawable/p17</item>
        <item>@drawable/p18</item>
        <item>@drawable/p19</item>
        <item>@drawable/p20</item>
        <item>@drawable/p21</item>
        <item>@drawable/p22</item>
        <item>@drawable/p23</item>
        <item>@drawable/p24</item>
        <item>@drawable/p25</item>
        <item>@drawable/p26</item>
        <item>@drawable/p27</item>
        <item>@drawable/p28</item>
        <item>@drawable/p29</item>
        <item>@drawable/p30</item>
        <item>@drawable/p31</item>
        <item>@drawable/p32</item>
        <item>@drawable/p33</item>
        <item>@drawable/p34</item>
        <item>@drawable/p35</item>
        <item>@drawable/p36</item>
        <item>@drawable/p37</item>
        <item>@drawable/p38</item>
        <item>@drawable/p39</item>
        <item>@drawable/p40</item>
        <item>@drawable/p41</item>
        <item>@drawable/p42</item>
        <item>@drawable/p43</item>
        <item>@drawable/p44</item>
        <item>@drawable/p45</item>
        <item>@drawable/p46</item>
        <item>@drawable/p47</item>
        <item>@drawable/p48</item>
        <item>@drawable/p49</item>
        <item>@drawable/p50</item>
        <item>@drawable/p51</item>
        <item>@drawable/p52</item>
        <item>@drawable/p53</item>
        <item>@drawable/p54</item>
        <item>@drawable/p55</item>
        <item>@drawable/p56</item>
        <item>@drawable/p57</item>
        <item>@drawable/p58</item>
        <item>@drawable/p59</item>
        <item>@drawable/p60</item>
        <item>@drawable/p61</item>
        <item>@drawable/p62</item>
        <item>@drawable/p63</item>
        <item>@drawable/p64</item>
        <item>@drawable/p65</item>
        <item>@drawable/p66</item>
        <item>@drawable/p67</item>
        <item>@drawable/p68</item>
        <item>@drawable/p69</item>
        <item>@drawable/p70</item>
        <item>@drawable/p71</item>
        <item>@drawable/p72</item>
        <item>@drawable/p73</item>
        <item>@drawable/p74</item>
        <item>@drawable/p75</item>
        <item>@drawable/p76</item>
        <item>@drawable/p77</item>
        <item>@drawable/p78</item>
        <item>@drawable/p79</item>
        <item>@drawable/p80</item>
        <item>@drawable/p81</item>
        <item>@drawable/p82</item>
        <item>@drawable/p83</item>
        <item>@drawable/p84</item>
        <item>@drawable/p85</item>
        <item>@drawable/p86</item>
        <item>@drawable/p87</item>
        <item>@drawable/p88</item>
        <item>@drawable/p89</item>
        <item>@drawable/p90</item>
        <item>@drawable/p91</item>
        <item>@drawable/p92</item>
        <item>@drawable/p93</item>
        <item>@drawable/p94</item>
        <item>@drawable/p95</item>
        <item>@drawable/p96</item>
        <item>@drawable/p97</item>
        <item>@drawable/p98</item>
        <item>@drawable/p99</item>
        <item>@drawable/p100</item>
    </array>
</resources>