<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/firstCard"
        style="@style/FutCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="160dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewFutCardScore"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fut_card_score"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <ImageView
                    android:id="@+id/imageViewFutCardClub"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="40dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"/>

                <ImageView
                    android:id="@+id/imageViewFutCardCountry"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="8dp"/>

                <TextView
                    android:id="@+id/textViewFutCardPos"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/fut_card_position"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageViewFutCardPhoto"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="25dp"
                    android:layout_width="80dp"
                    android:layout_height="100dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewFutCardName"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fut_card_name"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>