<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About_Program_Activity"
    >
    <androidx.cardview.widget.CardView
        style="@style/FutCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/book_image_view"
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:layout_constraintBottom_toTopOf="@id/title_text_view"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:srcCompat="@drawable/football" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/app_name"
                android:textSize="28sp"
                app:layout_constraintBottom_toTopOf="@id/description_text_view"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/book_image_view" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/description_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/about_description"
                app:layout_constraintBottom_toTopOf="@id/version_text_view"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_text_view" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/version_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/about_version"
                app:layout_constraintBottom_toTopOf="@id/authors_text_view"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description_text_view" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/authorsFW_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/about_authors"
                app:layout_constraintBottom_toTopOf="@id/authors_names_text_view"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/authorsJK_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/about_authors"
                app:layout_constraintBottom_toTopOf="@id/authors_names_text_view"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/authorsKJ_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/about_authors"
                app:layout_constraintBottom_toTopOf="@id/authors_names_text_view"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/authorsWS_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/about_authors"
                app:layout_constraintBottom_toTopOf="@id/authors_names_text_view"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/authors_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/about_authors"
                app:layout_constraintBottom_toTopOf="@id/authors_names_text_view"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/authors_names_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/about_authors_names"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>