<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/second_card_view"
        style="@style/FutCardList">

        <LinearLayout
            android:id="@+id/LinearLayout1comm"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageViewFutCardListPhoto"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_width="80dp"
                    android:layout_height="100dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewFutCardListName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/fut_card_name"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewFutCardListPos"
                    android:layout_gravity="start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/fut_card_position"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="5dp" />

                <TextView
                    android:id="@+id/textViewFutCardListScore"
                    android:layout_gravity="start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/fut_card_score"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="5dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageViewFutCardListClub"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"/>

                <ImageView
                    android:id="@+id/imageViewFutCardListCountry"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="60dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="8dp"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>